--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="display-container">
-      <p class="display">0000000000</p>
+      <p class="display"></p>
     </div>
 
     <div class="button-container">
@@ -30,7 +30,7 @@
       <button type="button" class="number">3</button>
       <button type="button" class="operator">+</button>
       <button type="button" class="operator">-</button>
-      <button type="button" class="exp">EXP</button>
+      <button type="button" class="operator">EXP</button>
       <button type="button" class="number">0</button>
       <button type="button" class="decimal">.</button>
       <button type="button" class="ans">ANS</button>
