--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="container">
     <div class="display-container">
+      <p class="history"></p>
       <p class="display"></p>
     </div>
 
