--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button type="button" class="number">3</button>
       <button type="button" class="operator">+</button>
       <button type="button" class="operator">EXP</button>
-      <button type="button" class="ans">ANS</button>
+      <button type="button" class="negative">+/-</button>
       <button type="button" class="number">0</button>
       <button type="button" class="decimal">.</button>
       <button type="button" class="equal">=</button>
