Add link to github

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     </div>
   </div>
   <div class="footer">
-    hello
+    <a href="https://github.com/TurbulentTomato">
+      COPYRIGHT : TurbulentTomato @ <img src="github-mark-white.png" alt="github logo" height="50px">
+    </a>
   </div>
 
   <script src="js/script.js">
