--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
     </div>
 
     <div class="button-container">
-      <button type="button" class="ac">AC</button>
+      <button type="button" class="ac">C</button>
       <button type="button" class="number">7</button>
       <button type="button" class="number">8</button>
       <button type="button" class="number">9</button>
       <button type="button" class="del">DEL</button>
-      <button type="button" class="operator">÷</button>
+      <button type="button" class="operator">/</button>
       <button type="button" class="number">4</button>
       <button type="button" class="number">5</button>
       <button type="button" class="number">6</button>
       <button type="button" class="operator">-</button>
-      <button type="button" class="operator">×</button>
+      <button type="button" class="operator">*</button>
       <button type="button" class="number">1</button>
       <button type="button" class="number">2</button>
       <button type="button" class="number">3</button>
       <button type="button" class="operator">+</button>
-      <button type="button" class="operator">EXP</button>
+      <button type="button" class="operator">^</button>
       <button type="button" class="negative">+/-</button>
       <button type="button" class="number">0</button>
       <button type="button" class="decimal">.</button>
